  (closes: :issue:`134`).  Thanks to Julian Taylor.
- The :data:`tables.parameters.MAX_THREADS` is now deprecated.  The maximum
  number of threads for Blosc_ and Numexpr_ is now handled using the
  :data:`tables.parameters.MAX_BLOSC_THREADS` and
  :data:`tables.parameters.MAX_NUMEXPR_THREADS` parameters respectively.
  Closes :issue:`142`.

.. _numpy: http://numpy.scipy.org
.. _Blosc: https://github.com/FrancescAlted/blosc
.. _Numexpr: http://code.google.com/p/numexpr


Changes from 2.3 to 2.3.1
=========================

- Fixed a bug that prevented to read scalar datasets of UnImplemented types
  (closes :issue:`111`). Thanks to Kamil Kisiel.

- Fixed a bug in `setup.py` that caused installation of PyTables 2.3 to fail
  on hosts with multiple python versions installed (closes :issue:`113`).
  Thanks to sbinet.


Changes from 2.2.1 to 2.3
=========================

Features coming from (now liberated) PyTables Pro
-------------------------------------------------

- OPSI is a powerful and innovative indexing engine allowing PyTables to
  perform fast queries on arbitrarily large tables. Moreover, it offers a wide
  range of optimization levels for its indexes so that the user can choose the
  best one that suits her needs (more or less size, more or less performance).
  Indexation code also takes advantage of the vectorization capabilities of
  the NumPy and Numexpr packages to ensure really short indexing and search
  times.

- A fine-tuned LRU cache for both metadata (nodes) and regular data that lets
  you achieve maximum speed for intensive object tree browsing during data
  reads and queries. It complements the already efficient cache present in
  HDF5, although this is more geared towards high-level structures that are
  specific to PyTables and that are critical for achieving very high
  performance.

Other changes
-------------

- Indexes with no elements are now evaluated as non-CSI ones.  Closes
  #312.
